# KITTI_SSD

./: CMakeLists.txt  Makefile  Makefile.config
data/KITTI/: KITTI_xml.py  create_data.sh  test_name_size.txt  train.txt
examples/KITTI/: KITTI_train_lmdb
examples/cifar10/: convert_cifar_data.cpp
examples/cpp_classification/: classification.cpp
examples/mnist/: convert_mnist_data.cpp  readme.md
examples/siamese/: convert_mnist_siamese_data.cpp
examples/ssd/: ssd_KITTI.py
include/caffe/: blob.hpp  common.hpp  data_reader.hpp  data_transformer.hpp  filler.hpp  internal_thread.hpp  layer.hpp  layer_factory.hpp  net.hpp  parallel.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp  syncedmem.hpp
include/caffe/layers/: absval_layer.hpp  accuracy_layer.hpp  annotated_data_layer.hpp  argmax_layer.hpp  base_conv_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  batch_reindex_layer.hpp  bias_layer.hpp  bnll_layer.hpp  concat_layer.hpp  contrastive_loss_layer.hpp  conv_layer.hpp  crop_layer.hpp  cudnn_conv_layer.hpp  cudnn_lcn_layer.hpp  cudnn_lrn_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  data_layer.hpp  (+55 more)
jobs/: detection.py
python/: CMakeLists.txt
python/caffe/: __init__.py  _caffe.cpp  classifier.py  detector.py  io.py  pycaffe.py
scripts/: create_annoset.py
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_reader.cpp  data_transformer.cpp  internal_thread.cpp  layer.cpp  layer_factory.cpp  net.cpp  parallel.cpp  solver.cpp  syncedmem.cpp
tools/: caffe.cpp  compute_image_mean.cpp  convert_annoset.cpp  convert_imageset.cpp  create_label_map.cpp  extract_features.cpp  get_image_size.cpp  upgrade_net_proto_binary.cpp  upgrade_net_proto_text.cpp  upgrade_solver_proto_text.cpp
(+266 files in other folders)
